# fgcb

./: .gitignore  LLM.py  README.md  interpret_execute_choice.py  main.py  mega_big.py  pyproject.toml  record.py  record_sigup.py
Experimenting/: LLM_testing.ipynb  gemini_testing.ipynb  vertex_testing.ipynb
fgcb/: LLM.py  interpret_execute_choice.py  main.py  mega_big.py  record_sigup.py
