[tool.poetry]
name = "fgcb"
version = "0.1.0"
description = ""
authors = ["Jake B <jacobboxerman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.115.4"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
